# aura_tpu_mixed

./: .dockerignore  .gitattributes  .gitignore  BIO_MOE_DESIGN.md  COMPLETE_DEPLOYMENT_CHECKLIST.md  Dockerfile  FILE_ANALYSIS_REPORT.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_ROADMAP.md  PRE_DEPLOYMENT_CHECKLIST.md  TESTING_SUMMARY.md  TEST_CLEANUP_SUMMARY.md  TOKENIZER_TRAINING_GUIDE.md  TPU_OPTIMIZATION_UPGRADE_GUIDE.md  architecture_latex.md  bio_phase0_local_test_results.json  colab_a100_pipeline.ipynb  colab_tpu_v6.ipynb  cpu_mps_training_config.json  demo_consciousness_llm.py  enhanced_local_test_results.json  here is part of my current system.md  local_test_results.json  main.tex  mermaid.md  phase0_cpu_results.json  phase1_cpu_results.json  pyproject.toml  run_on_all_hosts.sh  setup_tpu_host.sh  train_tpu_v4.py  xpk_e2e.sh
data/json/: emotions.jsonl
models/spm/: spiece.model  spiece.vocab  spiece_config.json
neural_ref/: personality.py
neural_ref/core/: __init__.py  amygdala.py  attention.py  attention_telemetry.py  nlms.py  (+19 more)
scripts/: cleanup_tests.py  deploy_optimizations.py  gcloud_tpu_multihost.sh  gcloud_tpu_multihost_optimized.sh  opensearch_build.sh  tpu_setup.sh  train_tokenizer.py  validate_optimizations.sh
tests/: test_bio_inspired_components.py  test_consciousness_aware_retrieval_core.py  test_data_processing.py  test_emotions_json_dataset.py  test_enhanced_spiking_retrieval_composite.py  test_optimizations.py  test_plutchik_emotion_encoder_jax.py  test_prompt_duel_system.py  test_prosody_extractor_jax.py  test_training_phases.py
(+157 files in other folders)
