[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "aura-tpu"
version = "0.1.0"
description = "Bio-MoE / spiking retrieval training stack (JAX/Flax)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy<2",
]

[project.scripts]
# CLI: `aura-mnist-poc`
aura-mnist-poc = "aura.training.mnist_expert_poc:main"

[project.optional-dependencies]
web = ["mmh3>=4.0.0"]
spm = ["sentencepiece>=0.1.99"]

# Core JAX stack
jax = [
  "jax>=0.4.31",
  "flax>=0.8.2",
  "optax>=0.2.2",
  "orbax-checkpoint>=0.6.0",
]

# Apple Metal backend (Mac only)
metal = [
  "jax-metal>=0.0.7; platform_system == 'Darwin'",
]

# TPU (Linux) — install libtpu via the JAX find-links separately
tpu = [
  "jax>=0.4.31; platform_system == 'Linux'",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "src/aura"]
